# Brochure-analyzer

Agentic-broc-breakdown/: README.md  pyproject.toml
Agentic-broc-breakdown/brochure-analyzer/: __init__.py  elements_breakdown.py  schema.py  wrapper.py
